Fix footer alignment on desktop

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -21,16 +21,7 @@ div.footer {
 div.footer-information {
     height     : 12.3rem;
     width      : 20rem;
-    margin-left: 11rem;
-}
-
-div.links {
-    width       : 20rem;
-    height      : 3rem;
-    margin-right: 11rem;
-    float       : right;
-    display     : flex;
-    align-items : center;
+    margin-left: 12%;
 }
 
 span.information-text {
@@ -39,7 +30,7 @@ span.information-text {
     font-size  : 0.8rem;
     display    : inline-block;
     margin-top : 2.13rem;
-    margin-left: 2.4rem;
+    margin-left: 2.7rem;
 }
 
 a.footer-a {
@@ -47,6 +38,15 @@ a.footer-a {
     font-size   : 0.8rem;
     margin-left : auto;
     margin-right: auto;
+}
+
+div.links {
+    width       : 20rem;
+    height      : 3rem;
+    margin-right: 12%;
+    float       : right;
+    display     : flex;
+    align-items : center;
 }
 
 div.wrapper {
